   accordingly since group `root' is called `wheel' there. No use 0:0
   instead of root:root in install/upgrade targets of the Makefile.
 MISC:
 - Slight improvement of the documentation (how to start/stop/restart
   the service and how to install the startup script) and in the expla-
   nation of the default config file (wendzelnntpd.conf).

2.0.7-stable "Berlin" : 26-Oct-2015
 FIXES:
 - If an XHDR command is requested for a header that is either not
   present or not implemented, return code 221 instead of 211 (this is
   conforming to RFC 2980).
 MISC:
 - Improve error reporting for chk_file_sec() as it can also return -1
   if a file does not exist.
 - Some tiny code cleanups

2.0.6-stable "Miami" : 26-Sep-2015
 ADDED_FEATURES:
 - Added max-size-of-postings as an optional parameter to the
   configuration file to allow increasing/decreasing the size of
   allowed postings. (thx @pintman for feature request)
 MISC:
 - Improved the 1.4.x -> 2.0.x upgrade documentation (thx to @Ann).
 - Performed other tiny improvements in the documentation.
 - Dont show 'read uselessinput' when asking for RETURN in make upgrade
 - Improved hints in ./configure for disabling MySQL and SQLite3 support
 - Performed a cleanup of several text files in base directory

2.0.5-stable "Auckland" : 28-Mar-2015
 SECURITY FIXES:
 - Shut down connection in case peer disconnects while the posting
   is received to prevent loops. However, no Usenet client is known
   to me that does this. It must be explicitely caused by an
   attacker or a client-side software failure.
   This is a security-fix release and published immediately after the
   problem was recognized.

2.0.4-stable "Bamberg" : 28-Mar-2015
 ADDED_FEATURES:
 - Introduced an upgrade functionality (make upgrade) to upgrade
   from 2.0.x to 2.0.y.
 - Added a short section to the documentation that describes how to
   upgrade from 2.0.x to 2.0.y.
 - Integrated functionality for compiling WendzelNNTPd without MySQL